--- a/task1(6).html
+++ b/task1(6).html
@@ -47,10 +47,16 @@
                                     <input type="checkbox" name="" id="">
                                     <label for="">reading</label> 
                                     <input type="checkbox" name="" id="">
-                                    <label for="">swimming</label> </td><br>
+                                    <label for="">swimming</label> <br>
                                     <input type="checkbox" name="" id="">
                                     <label for="">trave</label>
-                                    </tr>
+                                    </td></tr>
+                                    <tr><td  rowspan="2">description</td>
+                                    <td><textarea></textarea></td></tr>
+                                    <tr><td><button type="submit"> Submit</button>
+                                    <button type="reset">Reset</button></td></tr>
+                                    <tr><td colspan="2"><button type="button">Choose File</button>
+                                    <label>No file chosen</label></td></tr>
 
             
         </tbody>
